@@ -618,7 +618,12 @@ public class FileHandler extends PersistencyHandler {
 				} else if (childName.equals(XML_TOPIC_READ_ONLY)) {
 					topic.setReadOnly(new Boolean(XMLUtil.getTextContent(rootChild)).booleanValue());
 				} else if (childName.equals(XML_TOPIC_DELETE_DATE)) {
-					topic.setDeleteDate(Timestamp.valueOf(XMLUtil.getTextContent(rootChild)));
+					try {
+						topic.setDeleteDate(Timestamp.valueOf(XMLUtil.getTextContent(rootChild)));
+					} catch (Exception e) {
+						// FIXME - this can be removed once the ability to upgrade from 0.3.0 is removed
+						topic.setDeleteDate(new Timestamp(System.currentTimeMillis()));
+					}
 				} else if (childName.equals(XML_TOPIC_REDIRECT_TO)) {
 					topic.setRedirectTo(XMLUtil.getTextContent(rootChild));
 				} else if (childName.equals(XML_TOPIC_TYPE)) {
